[gd_scene load_steps=63 format=3 uid="uid://b0l5hqvx6pxlg"]

[ext_resource type="Script" path="res://scripts/electric_arc_auto_switch.gd" id="1_fn1eb"]
[ext_resource type="Texture2D" uid="uid://b48fv6bqxqlps" path="res://assets/sprites/fx/spr_electric_arc.png" id="2_6fenn"]
[ext_resource type="Script" path="res://scripts/static_body_hitbox.gd" id="3_7ydw7"]
[ext_resource type="AudioStream" uid="uid://dch38lv7y4owm" path="res://assets/sfx/snd_electric_arc.wav" id="4_uyqxg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3iy4w"]
atlas = ExtResource("2_6fenn")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s10d"]
atlas = ExtResource("2_6fenn")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u44t"]
atlas = ExtResource("2_6fenn")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfmqo"]
atlas = ExtResource("2_6fenn")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3wgv"]
atlas = ExtResource("2_6fenn")
region = Rect2(32, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjyao"]
atlas = ExtResource("2_6fenn")
region = Rect2(40, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_is6m7"]
atlas = ExtResource("2_6fenn")
region = Rect2(48, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sd71"]
atlas = ExtResource("2_6fenn")
region = Rect2(56, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3y51"]
atlas = ExtResource("2_6fenn")
region = Rect2(64, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_icqko"]
atlas = ExtResource("2_6fenn")
region = Rect2(72, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_sudg3"]
atlas = ExtResource("2_6fenn")
region = Rect2(80, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2kcd"]
atlas = ExtResource("2_6fenn")
region = Rect2(0, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy860"]
atlas = ExtResource("2_6fenn")
region = Rect2(8, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7dfg"]
atlas = ExtResource("2_6fenn")
region = Rect2(16, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dmfr"]
atlas = ExtResource("2_6fenn")
region = Rect2(24, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8x0l"]
atlas = ExtResource("2_6fenn")
region = Rect2(32, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh8r1"]
atlas = ExtResource("2_6fenn")
region = Rect2(40, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6u0s"]
atlas = ExtResource("2_6fenn")
region = Rect2(48, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej46x"]
atlas = ExtResource("2_6fenn")
region = Rect2(56, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d3al"]
atlas = ExtResource("2_6fenn")
region = Rect2(64, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5k5r"]
atlas = ExtResource("2_6fenn")
region = Rect2(72, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fqkp"]
atlas = ExtResource("2_6fenn")
region = Rect2(80, 0, 8, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0quw"]
atlas = ExtResource("2_6fenn")
region = Rect2(0, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i70lx"]
atlas = ExtResource("2_6fenn")
region = Rect2(8, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x57mt"]
atlas = ExtResource("2_6fenn")
region = Rect2(16, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2j8e"]
atlas = ExtResource("2_6fenn")
region = Rect2(24, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3ngh"]
atlas = ExtResource("2_6fenn")
region = Rect2(32, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_picoh"]
atlas = ExtResource("2_6fenn")
region = Rect2(40, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmepp"]
atlas = ExtResource("2_6fenn")
region = Rect2(48, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh3nd"]
atlas = ExtResource("2_6fenn")
region = Rect2(56, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_701da"]
atlas = ExtResource("2_6fenn")
region = Rect2(64, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltr0h"]
atlas = ExtResource("2_6fenn")
region = Rect2(72, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdo3i"]
atlas = ExtResource("2_6fenn")
region = Rect2(80, 0, 8, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq8nl"]
atlas = ExtResource("2_6fenn")
region = Rect2(0, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_blx83"]
atlas = ExtResource("2_6fenn")
region = Rect2(8, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqono"]
atlas = ExtResource("2_6fenn")
region = Rect2(16, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axsx4"]
atlas = ExtResource("2_6fenn")
region = Rect2(24, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6mft"]
atlas = ExtResource("2_6fenn")
region = Rect2(32, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukmr5"]
atlas = ExtResource("2_6fenn")
region = Rect2(40, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhdtp"]
atlas = ExtResource("2_6fenn")
region = Rect2(48, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smh8p"]
atlas = ExtResource("2_6fenn")
region = Rect2(56, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ets88"]
atlas = ExtResource("2_6fenn")
region = Rect2(64, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_himv4"]
atlas = ExtResource("2_6fenn")
region = Rect2(72, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikei1"]
atlas = ExtResource("2_6fenn")
region = Rect2(80, 0, 8, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeq30"]
atlas = ExtResource("2_6fenn")
region = Rect2(0, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckloq"]
atlas = ExtResource("2_6fenn")
region = Rect2(8, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vc14"]
atlas = ExtResource("2_6fenn")
region = Rect2(16, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q32lh"]
atlas = ExtResource("2_6fenn")
region = Rect2(24, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rb20"]
atlas = ExtResource("2_6fenn")
region = Rect2(32, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjrnw"]
atlas = ExtResource("2_6fenn")
region = Rect2(40, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_76s4v"]
atlas = ExtResource("2_6fenn")
region = Rect2(48, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_47f0c"]
atlas = ExtResource("2_6fenn")
region = Rect2(56, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_125ci"]
atlas = ExtResource("2_6fenn")
region = Rect2(64, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_82k82"]
atlas = ExtResource("2_6fenn")
region = Rect2(72, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wukhc"]
atlas = ExtResource("2_6fenn")
region = Rect2(80, 0, 8, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_4bec0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iy4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s10d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u44t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfmqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3wgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjyao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is6m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sd71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3y51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icqko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sudg3")
}],
"loop": true,
"name": &"1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2kcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy860")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7dfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dmfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8x0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh8r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6u0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej46x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d3al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5k5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fqkp")
}],
"loop": true,
"name": &"2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0quw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i70lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x57mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2j8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3ngh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_picoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmepp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh3nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_701da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltr0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdo3i")
}],
"loop": true,
"name": &"3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq8nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blx83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqono")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axsx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6mft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukmr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhdtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smh8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ets88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_himv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikei1")
}],
"loop": true,
"name": &"4",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeq30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckloq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vc14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q32lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rb20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjrnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76s4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47f0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_125ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82k82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wukhc")
}],
"loop": true,
"name": &"5",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhxad"]
size = Vector2(6, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ahvi"]
size = Vector2(8, 40)

[node name="ElectricArcBlue" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_fn1eb")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
modulate = Color(0, 0, 1, 1)
sprite_frames = SubResource("SpriteFrames_4bec0")
animation = &"5"
autoplay = "5"

[node name="WallCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jhxad")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_7ydw7")

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_7ahvi")

[node name="ElectricSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uyqxg")
bus = &"SFX"

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
